feat: add component knowledge and experiences

--- a/portifolio/src/app/modules/portifolio/components/header/header.component.html
+++ b/portifolio/src/app/modules/portifolio/components/header/header.component.html
@@ -1,1 +1,67 @@
-<p>header works!</p>
+<header>
+  <img
+    src="assets/img/tamires.jpg"
+    alt="foto de perfil"
+    width="150px"
+    height="130px"
+    loading="eager"
+  />
+  <h1>Tamires Sousa</h1>
+</header>
+<aside>
+  <div class="container">
+    <p>Full Stack</p>
+    <p>Belo Horizonte - Minas Gerais</p>
+    <nav>
+      <ul>
+        <li>
+          <a href="assets/pdf/cv.pdf" target="_blank" class="btn btn-primary">
+            Download CV
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.linkedin.com/in/tamires-s/"
+            target="_blank"
+            class="btn btn-secondary"
+          >
+            Linkedin
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <section>
+      <figure>
+        <img
+          src="assets/icons/whatsapp.svg"
+          alt="icone para contato do whatsapp"
+          width="22px"
+          height="24px"
+        />
+        <figcaption>
+          <a
+            href="https://api.whatsapp.com/send?phone=5511xxxxxxxxx&text=Ol%C3%A1%20Tamires!"
+            target="_blank"
+          >
+            <strong>Envie uma menssagem para:</strong>
+            <p>WhatsApp: (31) x xxxx-xxxx</p></a
+          >
+        </figcaption>
+      </figure>
+      <figure>
+        <img
+          src="assets/icons/mail.svg"
+          alt="icone para contato do whatsapp"
+          width="22px"
+          height="24px"
+        />
+        <figcaption>
+          <a href="mailto:tamireshc@gmail.com" target="_blank">
+            <strong>Envie um E-mail para:</strong>
+            <p>tamireshc&#64;gmail.com</p></a
+          >
+        </figcaption>
+      </figure>
+    </section>
+  </div>
+</aside>
