feat: add component projects

--- a/portifolio/src/app/modules/portifolio/pages/home/home.component.html
+++ b/portifolio/src/app/modules/portifolio/pages/home/home.component.html
@@ -2,4 +2,15 @@
 <main>
   <app-knowledge />
   <app-experiences />
+  @defer (on viewport) {
+  <app-projects />
+  }@placeholder {
+  <section>
+    <h2>Carregando os projetos..</h2>
+  </section>
+  }@error {
+  <section>
+    <h2>ocorreumum erro no carregamento</h2>
+  </section>
+  }
 </main>
