feat: add styles css for header component

--- a/portifolio/src/app/modules/portifolio/components/header/header.component.html
+++ b/portifolio/src/app/modules/portifolio/components/header/header.component.html
@@ -10,7 +10,7 @@
 </header>
 <aside>
   <div class="container">
-    <p>Full Stack</p>
+    <p>Full Stack Developeer</p>
     <p>Belo Horizonte - Minas Gerais</p>
     <nav>
       <ul>
@@ -57,7 +57,7 @@
         />
         <figcaption>
           <a href="mailto:tamireshc@gmail.com" target="_blank">
-            <strong>Envie um E-mail para:</strong>
+            <strong>Envie um e-mail para:</strong>
             <p>tamireshc&#64;gmail.com</p></a
           >
         </figcaption>
