--- a/portifolio/src/app/modules/portifolio/components/knowledge/knowledge.component.html
+++ b/portifolio/src/app/modules/portifolio/components/knowledge/knowledge.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Comhecimentos</h2>
+  <h2>Conhecimentos</h2>
   <ul>
     @for(item of arrayKnowledge(); track item) {
     <li>
