--- a/portifolio/src/app/modules/portifolio/pages/home/home.component.html
+++ b/portifolio/src/app/modules/portifolio/pages/home/home.component.html
@@ -10,7 +10,7 @@
   </section>
   }@error {
   <section>
-    <h2>ocorreumum erro no carregamento</h2>
+    <h2>ocorreu um erro no carregamento</h2>
   </section>
   }
 </main>
