--- a/portifolio/src/scss/theme/_variables.scss
+++ b/portifolio/src/scss/theme/_variables.scss
@@ -1,15 +1,15 @@
 :root {
-	--prymary:#2fbf71;
+	--primary: #2fbf71;
 	--primary-010: #21804d;
 
-  --secondary: #06628a;
-  --secondary-010: #06374e;
+	--secondary: #06628a;
+	--secondary-010: #06374e;
 
-  --white: #fff;
+	--white: #fff;
 
-  --black: #10101a;
-  --black-010: #2a2a30;
+	--black: #10101a;
+	--black-010: #2a2a30;
 
-  --grey: #9b9ba0;
+	--grey: #9b9ba0;
 
 }
