feat: add styles at experience and projects component

--- a/portifolio/src/app/modules/portifolio/components/experiences/experiences.component.html
+++ b/portifolio/src/app/modules/portifolio/components/experiences/experiences.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h2>Útimas Experiências</h2>
   @for (item of arrayExperiences(); track item) {
   <details>
     <summary>
