feat: add styles at lis component

--- a/lista-de-tarefas/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/lista-de-tarefas/src/app/modules/to-do-list/pages/list/list.component.html
@@ -4,7 +4,11 @@
     alt="sua lista está vazia - imagem ilustrativa"
     loading="eager"
   />
-  <button class="btn btn-primary">Crie uma lista de tarefas</button>
+  @if(addItem()){
+  <button class="btn btn-primary" (click)="addItem.set(false)">
+    Crie uma lista de tarefas
+  </button>
+  }@else {
   <div>
     <label class="input-label-text" for="inputValue">
       <input
@@ -13,7 +17,11 @@
         id="inputValue"
         autofocus
       />
-      <button class="btn btn-primary" title="Adicionar um novo item"></button>
+      <button
+        class="btn btn-primary-circle"
+        title="Adicionar um novo item"
+      ></button>
     </label>
   </div>
+  }
 </div>
