--- a/lista-de-tarefas/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/lista-de-tarefas/src/app/modules/to-do-list/pages/list/list.component.html
@@ -9,19 +9,9 @@
     Crie uma lista de tarefas
   </button>
   }@else {
-  <div>
-    <label class="input-label-text" for="inputValue">
-      <input
-        type="text"
-        placeholder="Adicione um novo item"
-        id="inputValue"
-        autofocus
-      />
-      <button
-        class="btn btn-primary-circle"
-        title="Adicionar um novo item"
-      ></button>
-    </label>
-  </div>
+  <app-input-add-item
+    [inputListItens]="getListItens()"
+    (outputAddListItens)="getInputAndAddItem($event)"
+  />
   }
 </div>
