--- a/lista-de-tarefas/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/lista-de-tarefas/src/app/modules/to-do-list/pages/list/list.component.html
@@ -22,10 +22,24 @@
   (outputAddListItens)="getInputAndAddItem($event)"
 />
 <main class="container">
-  <footer>
-    <button class="btn btn-danger" (click)="deleteAllItens()">
-      Deletar todos os Itens
-    </button>
-  </footer>
+  @if(listItemsStage('pending').length){
+  <h2>Pendências</h2>
+  <app-input-list-item
+    [inputListItens]="listItemsStage('pending')"
+    (outputUpdateItemCheckbox)="updateItemCheckbox($event)"
+  />
+  } @if(listItemsStage('completed').length){
+  <h2>Concluídas</h2>
+  <app-input-list-item
+    [inputListItens]="listItemsStage('completed')"
+    (outputUpdateItemCheckbox)="updateItemCheckbox($event)"
+  />
+  }
 </main>
+<footer>
+  <button class="btn btn-danger" (click)="deleteAllItens()">
+    Deletar todos os Itens
+  </button>
+</footer>
+
 }
