feat: add function for edit inputs at list

--- a/lista-de-tarefas/src/app/modules/to-do-list/components/input-list-item/input-list-item.component.html
+++ b/lista-de-tarefas/src/app/modules/to-do-list/components/input-list-item/input-list-item.component.html
@@ -13,6 +13,7 @@
     [value]="item.value"
     placeholder="Adicione um valor"
     autofocus
+    (input)="updateItemText(inputValue.value, item.value)"
   />
   <button class="btn btn-danger-circle" title="delete este item"></button>
 </label>
