--- a/lista-de-tarefas/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/lista-de-tarefas/src/app/modules/to-do-list/pages/list/list.component.html
@@ -27,12 +27,14 @@
   <app-input-list-item
     [inputListItens]="listItemsStage('pending')"
     (outputUpdateItemCheckbox)="updateItemCheckbox($event)"
+    (outputUpdateItemText)="updateItemText($event)"
   />
   } @if(listItemsStage('completed').length){
   <h2>Concluídas</h2>
   <app-input-list-item
     [inputListItens]="listItemsStage('completed')"
     (outputUpdateItemCheckbox)="updateItemCheckbox($event)"
+    (outputUpdateItemText)="updateItemText($event)"
   />
   }
 </main>
