feat: add function to delete itens at list

--- a/lista-de-tarefas/src/app/modules/to-do-list/components/input-list-item/input-list-item.component.html
+++ b/lista-de-tarefas/src/app/modules/to-do-list/components/input-list-item/input-list-item.component.html
@@ -15,6 +15,10 @@
     autofocus
     (input)="updateItemText(inputValue.value, item.value)"
   />
-  <button class="btn btn-danger-circle" title="delete este item"></button>
+  <button
+    class="btn btn-danger-circle"
+    title="delete este item"
+    (click)="deleteItem(item.value)"
+  ></button>
 </label>
 }
