--- a/lista-de-tarefas/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/lista-de-tarefas/src/app/modules/to-do-list/pages/list/list.component.html
@@ -28,6 +28,7 @@
     [inputListItens]="listItemsStage('pending')"
     (outputUpdateItemCheckbox)="updateItemCheckbox($event)"
     (outputUpdateItemText)="updateItemText($event)"
+    (outputDeleteItem)="deleteItem($event)"
   />
   } @if(listItemsStage('completed').length){
   <h2>Concluídas</h2>
@@ -35,6 +36,7 @@
     [inputListItens]="listItemsStage('completed')"
     (outputUpdateItemCheckbox)="updateItemCheckbox($event)"
     (outputUpdateItemText)="updateItemText($event)"
+    (outputDeleteItem)="deleteItem($event)"
   />
   }
 </main>
